# GGoldrush

./: CMakeLists.txt
src/: main.cpp
src/assets/: AssetsManager.cpp  AssetsManager.hpp
src/common/: AnimatedSprite.hpp  AnmatedSprite.cpp  Properties.hpp  Utils.hpp
src/game/: Player.hpp
src/game/items/: Item.cpp  Item.hpp  Storage.cpp  Storage.hpp
src/gui/: Debug.cpp  Debug.hpp  Drawable.hpp  GUIBase.cpp  GUIBase.hpp  Style.hpp
src/gui/box/: Box.cpp  Box.hpp
src/gui/button/: GenericButton.cpp  GenericButton.hpp  PlainButton.cpp  PlainButton.hpp  PlainTextButton.cpp  PlainTextButton.hpp
src/gui/common/: Callbacks.hpp  Events.hpp
src/gui/container/: Container.cpp  Container.hpp
src/gui/font/: FontManger.cpp  FontManger.hpp
src/gui/guis/: GameGUI.cpp  GameGUI.hpp
src/gui/guis/game/: GameGUI.cpp  GameGUI.hpp
src/gui/guis/game/panes/: Actionbar.cpp  Actionbar.hpp
src/gui/view/: View.cpp  View.hpp  ViewBase.cpp  ViewBase.hpp
src/world/: Camera.cpp  Camera.hpp  ClickableObject.hpp  Object.cpp  Object.hpp  ObjectsBuilder.cpp  ObjectsBuilder.hpp  Picker.cpp  Picker.hpp  Structure.cpp  Structure.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
src/world/structures/: Extractor.hpp  Resourcer.cpp  Resourcer.hpp
tests/: test_gui_containers.cpp  test_gui_containers_customized.cpp  test_item.cpp  test_storage.cpp
